--- a/stocks.html
+++ b/stocks.html
@@ -4,8 +4,8 @@
    <!--
       Project 01_11_02
 
-      Author: 
-      Date:   
+      Author: Daniel Truong
+      Date:   9.4.18
 
       Filename: index.htm
    -->
